Fix hover layout issues

--- a/pages/scss/contacts.scss
+++ b/pages/scss/contacts.scss
@@ -197,6 +197,16 @@
       position: relative;
       .content {
         position: relative;
+        cursor: pointer;
+        overflow: hidden;
+        &:hover {
+          img {
+            transform: scale(1.15);
+          }
+        }
+        img {
+          transition: all 1s;
+        }
         &:after {
           content: "";
           position: absolute;
